Jdk25 (#34)
* Update pom.xml

* Updates github actions

* Updates copyright

* Renames file

* Removes Guava

* Update pom.xml

* Create module-info.java

* Revert "Renames file"

This reverts commit 16e1af79855bd05366a187d492cf3166c9dabda5.

* Update module-info.java

* Updates

* Refines

* Refines

* Update module-info.java

* Update pom.xml

* Saves progress

* Updates

* Update pom.xml

* Update module-info.java

* Stuff

* Update pom.xml

* Update module-info.java

* Test updates

* Test fixes

* Fixes

* Refines

* Update pom.xml

* Update pom.xml

* Update AlchemyDataExtensionTest.java

* Update AlchemyDataExtension.java

* Documentation enhancements

* Reorganizes

* Javadoc updates

* Update AlchemyDataExtension.java

* Adds docus

* Action updats

* Update maven-publish-snapshots.yml

* Update src/main/java/tech/sirwellington/alchemy/test/generation/AlchemyDataExtension.java

* Update src/main/java/tech/sirwellington/alchemy/test/generation/AlchemyDataExtension.java